[package]
name = "echo-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
hyper = { version = "1.5.2", features = ["full"] }
tokio = { version = "1.42.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
bytes = "1"
http-body-util = { version = "0.1.2" }
anyhow = { version = "1.0.95" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
fern = "0.6"
humantime = "2.1.0"
clap = { version = "4.5.23", features = ["derive"] }
tonic = "0.12.3"
prost = "0.13.4"