[package]
name = "echo-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
hyper = { version = "1.6.0", features = ["full"] }
tokio = { version = "1.43.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
bytes = "1.10.0"
http-body-util = { version = "0.1.2" }
anyhow = { version = "1.0.96" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
fern = "0.7.1"
humantime = "2.1.0"
clap = { version = "4.5.31", features = ["derive"] }
tonic = "0.12.3"
prost = "0.13.5"
colored="3.0.0"
serde="1.0.218"
serde_json="1.0.139"