[package]
name = "echo-proxy"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { version = "=1.0.100" }
bytes = "=1.11.0"
clap = { version = "=4.5.53", features = ["derive"] }
colored = "=3.0.0"
criterion = { version = "=0.8.1", features = ["html_reports"] }
fern = "=0.7.1"
http-body-util = { version = "=0.1.3" }
humantime = "=2.3.0"
hyper = { version = "=1.8.1", features = ["full"] }
hyper-util = { version = "=0.1.19", features = ["full"] }
prost = "=0.14.1"
serde = "=1.0.228"
serde_json = "=1.0.147"
tokio = { version = "=1.48.0", features = ["full"] }
tonic = "=0.14.2"
tracing = "=0.1.44"
tracing-appender = "=0.2.4"
tracing-subscriber = "=0.3.22"
